--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4
       with:
-        branch: gh-pages  # Deploy to the gh-pages branch
+        branch: main  # Deploy to the gh-pages branch
         folder: dist  # Adjust to your build folder (if you have one)
 
     - name: Update Gist with New Messages
