--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         branch: main  # Deploy to the gh-pages branch
+        folder: dist
 
     - name: Update Gist with New Messages
       run: |
