--- a/.github/workflows/api-request.yml
+++ b/.github/workflows/api-request.yml
@@ -17,6 +17,6 @@ jobs:
         env:
           API_KEY: ${{ secrets.GH_TOKEN }} # Access secret from GitHub Secrets
         run: |
-          curl -X GET "https://api.github.com/gists/your_gist_id" \
+          curl -X GET "https://api.github.com/gists/6686b37f704607d66c455ceefef7fec6" \
           -H "Authorization: Bearer $API_KEY" \
           -H "Accept: application/vnd.github.v3+json"
