--- a/.github/workflows/api-request.yml
+++ b/.github/workflows/api-request.yml
@@ -13,10 +13,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Make API call
+      - name: Make API call to GitHub Gist
         env:
-          API_KEY: ${{ secrets.GH_TOKEN }} # Access secret from GitHub Secrets
+          API_KEY: ${{ secrets.GH_TOKEN }}  # Access secret from GitHub Secrets
         run: |
           curl -X GET "https://api.github.com/gists/6686b37f704607d66c455ceefef7fec6" \
           -H "Authorization: Bearer $API_KEY" \
-          -H "Accept: application/vnd.github.v3+json"
+          -H "Accept: application/vnd.github.v3+json" \
+          -o gist.json  # Save the response to a file
+          
+      - name: Commit and Push gist.json to repository
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add gist.json
+          git commit -m "Update Gist data"
+          git push
