--- a/.github/workflows/api-request.yml
+++ b/.github/workflows/api-request.yml
@@ -1,25 +1,47 @@
-name: Update Gist
+name: Update Gist with Messages
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:  # Manual trigger
 
 jobs:
   update-gist:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Update Gist with new messages
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # Use the GH_TOKEN secret
+      - name: Fetch current chat.json from the Gist
+        id: fetch-gist
         run: |
-          # Fetch the latest chat.json content
-          CONTENT=$(cat chat.json)
+          GIST_ID="6686b37f704607d66c455ceefef7fec6"  # Replace with your Gist ID
+          GITHUB_TOKEN="${{ secrets.GH_TOKEN }}"
           
-          # Make the API request to update the Gist
+          # Fetch the Gist content from GitHub API
+          GIST_CONTENT=$(curl -s \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/gists/$GIST_ID")
+          
+          # Extract the content of the chat.json file from the Gist
+          echo "$GIST_CONTENT" > gist_content.json
+          FILE_CONTENT=$(echo "$GIST_CONTENT" | jq -r '.files["chat.json"].content')
+
+          echo "chat.json content fetched from Gist: $FILE_CONTENT"
+
+          # Store the extracted content for use later in the workflow
+          echo "CONTENT=$FILE_CONTENT" >> $GITHUB_ENV
+
+      - name: Update chat.json in the Gist
+        run: |
+          # New message you want to append (e.g., from frontend or a new input)
+          NEW_MESSAGE="{
+            \"sender\": \"John Doe\",
+            \"text\": \"This is a new message\",
+            \"timestamp\": \"$(date --utc +%Y-%m-%dT%H:%M:%SZ)\",
+            \"reactions\": {}
+          }"
+
+          # Merge the new message with the existing content
+          UPDATED_CONTENT=$(echo "$CONTENT" | jq --argjson newMessage "$NEW_MESSAGE" '.messages += [$newMessage]')
+
+          # Send the updated content back to the Gist
           curl -X PATCH \
             -H "Authorization: Bearer $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
@@ -27,9 +49,10 @@ jobs:
           {
             "files": {
               "chat.json": {
-                "content": "$CONTENT"
+                "content": "$UPDATED_CONTENT"
               }
             }
           }
           EOF
 
+          echo "Updated chat.json in the Gist successfully"
