--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,17 @@
-name: Deploy to GitHub Pages
+name: Deploy to Main Branch
 
 on:
   push:
     branches:
-      - main  # Trigger on pushes to the 'main' branch
+      - main  # Trigger the workflow when there's a push to the 'main' branch
 
 permissions:
-  contents: write  # Allow writing to the repository
-  id-token: write   # Required for token-based authentication
+  contents: write  # Allow writing to the repository (necessary for pushing changes)
+  id-token: write  # Required for token-based authentication
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # Run on the latest Ubuntu environment
+    runs-on: ubuntu-latest  # Run the job on the latest Ubuntu environment
 
     steps:
     # Step 1: Checkout the repository
@@ -24,9 +24,10 @@ jobs:
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
 
-    # Step 3: Deploy to GitHub Pages
-    - name: Deploy to GitHub Pages
+    # Step 3: Deploy to the 'main' branch (this is where the files will be pushed)
+    - name: Deploy to Main Branch
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GH_TOKEN }}  # Use the GitHub token for authentication
-        publish_dir: ./  # Publish from the root directory (adjust if needed)
+        publish_dir: ./  # Adjust this to specify which directory to publish (e.g., './build' if using a build step)
+        publish_branch: main  # Push the changes to the 'main' branch
